Implemented Presence (#32)
* Implemented Presence

* removed debugcode

* Implemented Requested Changes

* Fixed: Formatting

* Validations for Checkin and checkout fixed,
Update presence check for Value

* fix: Unique active presence Constraint

* Validation for ID Format and Time Implemented

* removed empty lines

* cleaned up CheckoutPresence

* auto formatter fixed and formatted autmatically

* auth pb reverted

* sorting fixed

* added: nolint messages for nessessary globals and unsafe operations
fixed: Pagetoken generation

* Applied Linter Fixes
